# gazebo_simulation

./: CMakeLists.txt  README.md  package.xml
config/: backpack_2d.launch  backpack_2d.lua  carto_online_localization.lua  offline_backpack_2d.launch
configuration_files/: omicron_2d.lua
launch/: carto_slam_online_localization.launch  carto_slam_online_mapping.launch  robot_description.launch  void_world.launch  world.launch  world_of_arena.launch  world_of_labyrinth.launch  world_of_labyrinth_localization.launch
models/building_editor_models/Labyrinth/: model.config  model.sdf
models/linoleum_plane/: model.config  model.sdf
models/linoleum_plane/materials/scripts/: linoleum.material
models/model_editor_models/Wall/: model.sdf
my_robot/: package.xml
my_robot/launch/: world.launch
my_robot/urdf/: my_robot.xacro
rviz/: mapping.rviz
urdf/: omni_wheel.urdf.xacro  realsense-RS200.macro.xacro  robot.gazebo  robot.xacro
worlds/: arena.world  boxes.world  labyrinth.world
worlds/launch/: robot_description.launch  world.launch
