<?xml version="1.0"?>
<package format="2">
  <name>gazebo_simulation</name>
  <version>0.0.0</version>
  <description>Gazebo simulation of the robot</description>

  <maintainer email="kurbakov.d@gmail.com">kurbakov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
